# Researches-upon-Static-Task-Scheduling-of-Heterogeneous-Parallel-System

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/algorithm/: CMakeLists.txt
code/algorithm/include/ga/: ga.h
code/algorithm/include/helper/: helper.h
code/algorithm/include/ls/: ls.h
code/algorithm/src/: ga.cc
code/algorithm/src/ga/: ga_pa.cc
code/algorithm/src/helper/: helper.cc
code/algorithm/src/ls/: ls_nl.cc
code/include/: global.h
code/include/algorithm/ga/: ga.h  ga_nl.h  ga_pa.h
code/include/algorithm/helper/: helper.h
code/include/algorithm/ls/: ls.h  ls_alap.h  ls_asap.h  ls_nl.h  ls_pa.h
code/include/algorithm/naive/: cpop.h  hashing.h
code/include/structs/device/: device.h  device_graph.h
code/include/structs/graph/: graph.h
code/include/structs/task/: task.h  task_graph.h
code/main/: CMakeLists.txt  main.cc
code/src/: global.cc
code/src/algorithm/ga/: ga.cc  ga_nl.cc  ga_pa.cc
code/src/algorithm/helper/: helper.cc
code/src/algorithm/ls/: ls.cc  ls_alap.cc  ls_asap.cc  ls_nl.cc  ls_pa.cc
code/src/algorithm/naive/: cpop.cc  hashing.cc
code/src/main/: main.cc
code/src/structs/device/: device.cc
code/src/structs/graph/: graph.cc
code/src/structs/task/: task.cc
code/structs/: CMakeLists.txt
code/structs/include/device/: device.h  device_graph.h
code/structs/include/graph/: graph.h
code/structs/include/task/: task.h  task_graph.h
code/structs/src/: device.cc  graph.cc  task.cc
code/test/: test.cc
