cmake_minimum_required(VERSION 3.17)
project(Researches_upon_Task_Scheduling_of_Heterogeneous_Parallel_System
        HOMEPAGE_URL "https://github.com/Rossil2012/Researches-upon-Task-Scheduling-of-Heterogeneous-Parallel-System")

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(code/main)
add_subdirectory(code/structs)
add_subdirectory(code/algorithm)
